--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="logo-container">
                 <div class="logo-placeholder">
                      
-                    <img src="C:\Users\SHIV\Downloads\lbk-pu-college-sindhanur-raichur-colleges-8mtscnbppx-250-removebg-preview.png" alt="Modern Classroom">
+                    <img src="images/college logo.png" alt="Modern Classroom">
                 </div>
                 <div class="logo-text">NOBEL <span>DEGREE</span> & <span>LBK</span> PU <span>COLLEGE</span></div>
             </div>
@@ -1030,3 +1030,4 @@
     </script>
 </body>
 </html>
+
